--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Passions+Conflict&family=Rubik+Dirt&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+   <nav class="navbar" id="home">
+        <div id="main">Archas.</div>
+        <a href="#home" class="active">Home</a>
+        <a href="#projects">Projects</a>
+       <a href="#skills">Skills</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+</nav>
+<div class="homepage">
+<div>
+    HI! I'm Archas Srivastava
+</div>
+  </div>
+  
 </body>
 </html>
