--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Passions+Conflict&family=Rubik+Dirt&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Passions+Conflict&family=Rubik+Dirt&family=Stalinist+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -26,6 +25,18 @@
     HI! I'm Archas Srivastava
 </div>
   </div>
-  
+  <br>
+  <br>
+  <div class="heading" id="projects">PROJECTS</div>
+  <div class="showcase">
+    <div class="column"><img src="https://media.giphy.com/media/VzqCtT1qjCyGnZdyco/giphy.gif" alt="Avatar" style="width:100%"></div>
+    <div class="column">Cube Runner <br> <br><p>This is a simple obstacle avoiding game made with unity.</p><br><br><a href="https://github.com/Archiehere/Cube-Runner">SOURCE CODE</a></div>
+  </div>
+  <br>
+  <br>
+  <div class="showcase2">
+    <div class="column">Pong<br> <br><p>This is a Tribute to the original game with the same name by Atari made from scratch in C++.</p><br><br><a href="https://github.com/Archiehere/Pong">SOURCE CODE</a></div>
+    <div class="column"><img src="https://media.giphy.com/media/KcokcdUS7kW96e70MM/giphy.gif" alt="Avatar" style="width:100%"></div>
+  </div>
 </body>
 </html>
