Added about me page

--- a/index.html
+++ b/index.html
@@ -15,28 +15,37 @@
    <nav class="navbar" id="home">
         <div id="main">Archas.</div>
         <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
         <a href="#projects">Projects</a>
        <a href="#skills">Skills</a>
-        <a href="#about">About</a>
+        
         <a href="#contact">Contact</a>
 </nav>
 <div class="homepage">
 <div>
-    HI! I'm Archas Srivastava
+    Hello!🤟 I'm Archas Srivastava
 </div>
   </div>
   <br>
-  <br>
+  <div class="about" id="about">
+    <div class="heading">About Me</div>
+    <div class="abtbox">
+    <div class="imgstack "><img class="background" src="\images\yellowcircle.png" alt="yellowcircle" ><img class="foreground" src="\images\face.png" alt="face">  </div>
+    <div class="abttext">text</div>
+    </div>
+  </div>
+  
+
   <div class="heading" id="projects">PROJECTS</div>
   <div class="showcase">
-    <div class="column"><img src="https://media.giphy.com/media/VzqCtT1qjCyGnZdyco/giphy.gif" alt="Avatar" style="width:100%"></div>
+    <div class="column"><img src="https://media.giphy.com/media/VzqCtT1qjCyGnZdyco/giphy.gif" alt="Project1" style="width:100%"></div>
     <div class="column">Cube Runner <br> <br><p>This is a simple obstacle avoiding game made with unity.</p><br><br><a href="https://github.com/Archiehere/Cube-Runner">SOURCE CODE</a></div>
   </div>
   <br>
   <br>
   <div class="showcase2">
     <div class="column">Pong<br> <br><p>This is a Tribute to the original game with the same name by Atari made from scratch in C++.</p><br><br><a href="https://github.com/Archiehere/Pong">SOURCE CODE</a></div>
-    <div class="column"><img src="https://media.giphy.com/media/KcokcdUS7kW96e70MM/giphy.gif" alt="Avatar" style="width:100%"></div>
+    <div class="column"><img src="https://media.giphy.com/media/KcokcdUS7kW96e70MM/giphy.gif" alt="Project2" style="width:100%"></div>
   </div>
 </body>
 </html>
