--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="about" id="about">
     <div class="heading">About Me</div>
     <div class="abtbox">
-    <div class="imgstack "><img class="background" src="\images\yellowcircle.png" alt="yellowcircle" ><img class="foreground" src="\images\face.png" alt="face">  </div>
+    <div class="imgstack "><img class="background" src="images\yellowcircle.png" alt="yellowcircle" ><img class="foreground" src="images\face.png" alt="face">  </div>
     <div class="abttext">text</div>
     </div>
   </div>
