Added contact panel

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Passions+Conflict&family=Rubik+Dirt&family=Stalinist+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Alkalami&family=Dancing+Script&family=Passions+Conflict&family=Rubik+Dirt&family=Stalinist+One&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
               
 <title>Archas.</title>
 </head>
 <body>
-   <nav class="navbar" id="home">
+  
+  <nav class="navbar" id="home">
         <div id="main">Archas.</div>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -80,6 +81,32 @@
     <div class="column">Pong<br> <br><p>This is a Tribute to the original game with the same name by Atari made from scratch in C++.</p><br><br><a href="https://github.com/Archiehere/Pong">SOURCE CODE</a></div>
     <div class="column"><img src="https://media.giphy.com/media/KcokcdUS7kW96e70MM/giphy.gif" alt="Project2" style="width:100%"></div>
   </div>
+</div>
+<div class="contactpanel">
+  <div class="heading" id="contact">Contact Me</div>
+    <div class="contactcontainer">
+      <div class="contactlink">
+        <a href="https://github.com/Archiehere">
+        <i class="devicon-github-original"></i></a>
+      </div>
+      <div class="contactlink">
+        <button onclick="location.href='mailto:cheeku67@gmail.com';">
+        <i class="devicon-google-plain colored"></i></button>
+      </div>
+      <div class="contactlink">
+        <a href="https://www.facebook.com/archas.srivastava/">
+        <i class="devicon-facebook-plain colored"></i></a>
+      </div>
+      <div class="contactlink">
+        <a href="https://www.linkedin.com/in/archas-srivastava-468878242/">
+        <i class="devicon-linkedin-plain colored"></i></a>
+      </div>
+      <div class="contactlink">
+        <a href="https://twitter.com/Archas_">
+        <i class="devicon-twitter-original colored"></i></a>
+      </div>
+      
+    </div>
 </div>
 </body>
 </html>
