customised navbar and added to top button for mobile view

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 <title>Archas.</title>
 </head>
 <body>
-  
-  <nav class="navbar" id="home">
+  <a id="topbtn" href="#home">
+    🔝
+  </a>
+  <a href="" id="home"></a>
+  <nav class="navbar" >
         <div id="main">Archas.</div>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -27,13 +30,14 @@
         
         <a href="#contact">Contact</a>
 </nav>
-<div class="homepage">
+
+<div class="homepage" >
 <div>
     Hello!🤟 I'm Archas Srivastava
 </div>
   </div>
-  
-  <div class="about" id="about">
+  <a href="" id="about"></a>
+  <div class="about" >
     <div class="heading">About Me</div>
     <div class="abtbox">
     <div class="imgstack "><img class="background" src="images\yellowcircle.png" alt="yellowcircle" ><img class="foreground" src="images\face.png" alt="face">  </div>
@@ -45,7 +49,9 @@
     </div>
     </div>
   </div>
-  <div class="skillspanel" id="skills">
+  <a href="" id="skills"></a>
+  <br>
+  <div class="skillspanel">
     <div class="heading">SKILLS</div>
     <div class="skillbox">
       <div>
@@ -70,8 +76,10 @@
       </div>
     </div>
   </div>
+  <a href="" id="projects"></a>
+  <br>
   <div class="projectpanel">
-  <div class="heading" id="projects">PROJECTS</div>
+  <div class="heading" >PROJECTS</div>
   <div class="showcase">
     <div class="column"><img src="https://media.giphy.com/media/VzqCtT1qjCyGnZdyco/giphy.gif" alt="Project1" style="width:100%"></div>
     <div class="column">Cube Runner <br> <br><p>This is a simple obstacle avoiding game made with unity.</p><br><a href="https://github.com/Archiehere/Cube-Runner">SOURCE CODE</a></div>
@@ -83,8 +91,10 @@
     <div class="column"><img src="https://media.giphy.com/media/KcokcdUS7kW96e70MM/giphy.gif" alt="Project2" style="width:100%"></div>
   </div>
 </div>
+<a href="" id="contact"></a>
+<br>
 <div class="contactpanel">
-  <div class="heading" id="contact">Contact Me</div>
+  <div class="heading" >Contact Me</div>
     <div class="contactcontainer">
       <div class="contactlink">
         <a href="https://github.com/Archiehere">
